[package]
name = "abi_tool_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
ethers = { version = "2.0.8", features = ["rustls","abigen"] }
reqwest = "0.11.18"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
