[package]
name = "abi_converter_cli"
version = "0.1.0"
edition = "2021"
authors = ["fiending.eth <fiending@skiff.com>"]

[dependencies]
chrono = "0.4.29"
clap = "4.4.2"
ethers = { version = "2.0.9", features = ["rustls", "abigen"] }
reqwest = "0.11.20"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }

[lib]
name = "utils"
path = "src/lib/lib.rs"
